Update After Final Test of 2022-06

--- a/Database/CMU15-445.md
+++ b/Database/CMU15-445.md
@@ -1,1 +1,45 @@
 ## Course Introduction and the Relational Model
+
+## Database Storage 1
+
+Volatile & Non-Volatile Devices
+
+Disk-Oriented DBMS
+
+- organized into pages
+
+- page directory
+
+- buffer pool
+
+### File Storage
+
+Linked List
+
+Page Directory
+
+### Page Layout
+
+header : page size, checksum, DBMS version, transaction visibility, etc.
+
+Tuple-Oriented (most common)
+
+- header : keeps the track of the number of used slots and the offset of the starting location of last used slot and a slot array, which keeps track of the location of the start of each tuple.
+
+- slotted pages & slot array
+
+- pack the entire tuple in a single page (only: two related table ,"pre-join", can make two table on the same page)
+
+Log-Structrue
+
+### Tuple Layout
+
+header : Visibility information for the DBMS’s concurrency control protocol, bitmap for `NULL` values, etc.
+
+most DBMS do not allow a tuple to exceed the size of page
+
+most common : `page_id + (offset or slot)`
+
+
+## Database Storage 2
+
